Milestone 2: Updated search functionality. Added alert popup for no data and no source selected